[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbonplan-maps"
version = "0.1.0"
description = "A Jupyter Widget for @carbonplan/maps"
authors = [
    { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "anywidget>=0.6.1"
]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "watchfiles"
]

[tool.hatch.envs.default]
features = ["dev"]


[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = true


[tool.ruff]
line-length = 100
target-version = "py310"
builtins = ["ellipsis"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = ["E402", "E501", "E731"]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]


[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.isort]
known-first-party = ["carbonplan_maps"]
